--- a/publications.html
+++ b/publications.html
@@ -17,7 +17,45 @@ title: Publications
     {% endfor %}
 
 
-     <article class="publication">
+</li></ol>
+<h2 id="journal-articles">Journal articles:</h2>
+<ol class="bibliography"><li><span style="text-align: justify; display:block;" id="RamirezSantamariaScharf-2024-Passivedetectionofrandomsignal">D. Ramírez, I. Santamaría, and L. L. Scharf, “Passive detection of a random signal common to multi-sensor reference and surveillance arrays,” <i>IEEE Trans. Vehicular Techn.</i>, vol. 73, no. 7, pp. 10106–10117, Jul. 2024.</span>
+<div class="papers-links">
+<a data-toggle="collapse" href="#RamirezSantamariaScharf-2024-Passivedetectionofrandomsignal-bibtex" class="link" data-title="BibTeX">
+    <svg class="iconpub icon-bibtex" style="width: 18px;height: 18px;"><use xlink:href="#icon-bibtex"></use></svg>
+</a>
+<a class="link" data-title="Abstract" data-toggle="collapse" href="#RamirezSantamariaScharf-2024-Passivedetectionofrandomsignal-abstract">
+    <svg class="iconpub icon-abstract" style="width: 18px;height: 18px;"><use xlink:href="#icon-abstract"></use></svg>
+</a>
+<a class="link" data-title="DOI" href="https://doi.org/10.1109/TVT.2024.3366757">
+    <svg class="iconpub icon-doi" style="width: 18px;height: 18px;"><use xlink:href="#icon-doi"></use></svg>
+</a>
+<a class="link" data-title="PDF file" href="/assets/papers/TVT24_preprint.pdf">
+    <svg class="iconpub icon-pdf" style="width: 18px;height: 18px;"><use xlink:href="#icon-pdf"></use></svg>
+</a>
+</div>
+<pre id="RamirezSantamariaScharf-2024-Passivedetectionofrandomsignal-bibtex" class="collapse"><small>@article{RamirezSantamariaScharf-2024-Passivedetectionofrandomsignal,
+  arxiv = {2402.07583},
+  author = {Ram{\'i}rez, D. and Santamar{\'i}a, I. and Scharf, L. L.},
+  doi = {10.1109/TVT.2024.3366757},
+  handle = {10016/44500},
+  month = {{J}uly},
+  issn = {0018-9545},
+  journal = {{IEEE} {T}rans.\ {V}ehicular {T}echn.},
+  volume = {73},
+  number = {7},
+  pages = {10106--10117},
+  title = {Passive detection of a random signal common to multi-sensor reference and surveillance arrays},
+  year = {2024},
+  local-url = {TVT24_preprint.pdf}
+}
+</small></pre>
+
+
+
+     
+
+<article class="publication">
   <h3 class="pub-title">Quantum Entanglement in Polymer Chains: A Novel Approach</h3>
   <p class="authors">Smith, J. A., Johnson, M. B., & Williams, R. C.</p>
   <p class="journal-info">
