--- a/publications.html
+++ b/publications.html
@@ -21,9 +21,6 @@ title: Publications
 <h2 id="journal-articles">Journal articles:</h2>
 <ol class="bibliography"><li><span style="text-align: justify; display:block;" id="RamirezSantamariaScharf-2024-Passivedetectionofrandomsignal">D. Ramírez, I. Santamaría, and L. L. Scharf, “Passive detection of a random signal common to multi-sensor reference and surveillance arrays,” <i>IEEE Trans. Vehicular Techn.</i>, vol. 73, no. 7, pp. 10106–10117, Jul. 2024.</span>
 </a>
-<a class="link" data-title="PDF file" href="/assets/papers/TVT24_preprint.pdf">
-    <svg class="iconpub icon-pdf" style="width: 18px;height: 18px;"><use xlink:href="#icon-pdf"></use></svg>
-</a>
 </div>
 <pre id="RamirezSantamariaScharf-2024-Passivedetectionofrandomsignal-bibtex" class="collapse"><small>@article{RamirezSantamariaScharf-2024-Passivedetectionofrandomsignal,
   arxiv = {2402.07583},
@@ -44,11 +41,9 @@ title: Publications
 
 
 
-     
-
 <article class="publication">
-  <h3 class="pub-title">Quantum Entanglement in Polymer Chains: A Novel Approach</h3>
-  <p class="authors">Smith, J. A., Johnson, M. B., & Williams, R. C.</p>
+  #<h3 class="pub-title">Quantum Entanglement in Polymer Chains: A Novel Approach</h3>
+  <p>D. Ramirez, I. Santamaria, and L. L. Scharf, "Passive detection of a random signal common to multi-sensor reference and surveillance arrays" </p>
   <p class="journal-info">
     <span class="journal-name">Journal of Advanced Quantum Physics</span>,
     <span class="volume">42</span>(<span class="issue">3</span>),
