Comment some parts.html

--- a/publications.html
+++ b/publications.html
@@ -19,7 +19,8 @@ title: Publications
 
 </li></ol>
 <h2 id="journal-articles">Journal articles:</h2>
-<ol class="bibliography"><li><span style="text-align: justify; display:block;" id="RamirezSantamariaScharf-2024-Passivedetectionofrandomsignal">D. Ramírez, I. Santamaría, and L. L. Scharf, “Passive detection of a random signal common to multi-sensor reference and surveillance arrays,” <i>IEEE Trans. Vehicular Techn.</i>, vol. 73, no. 7, pp. 10106–10117, Jul. 2024.</span>
+<!-- <ol class="bibliography"><li><span style="text-align: justify; display:block;" id="RamirezSantamariaScharf-2024-Passivedetectionofrandomsignal">D. Ramírez, I. Santamaría, and L. L. Scharf, “Passive detection of a random signal common to multi-sensor reference and surveillance arrays,” <i>IEEE Trans. Vehicular Techn.</i>, 
+     vol. 73, no. 7, pp. 10106–10117, Jul. 2024.</span>  
 </a>
 </div>
 <pre id="RamirezSantamariaScharf-2024-Passivedetectionofrandomsignal-bibtex" class="collapse"><small>@article{RamirezSantamariaScharf-2024-Passivedetectionofrandomsignal,
@@ -37,7 +38,7 @@ title: Publications
   year = {2024},
   local-url = {TVT24_preprint.pdf}
 }
-</small></pre>
+</small></pre>-->
 
 
 
