--- a/publications.html
+++ b/publications.html
@@ -17,4 +17,4 @@ title: Publications
     {% endfor %}
 
 
-<script src="https://bibbase.org/show?bib=https%3A%2F%2Fgithub.com%2FIgnacioSantamaria%2FIgnacioSantamaria.github.io%2Fblob%2Fgh-pages%2Fassets%2Fpubs.bib&commas=true&noBootstrap=1&jsonp=1"></script>
+<script src="https://bibbase.org/show?bib=https%3A%2F%2Fbibbase.org%2Fnetwork%2Ffiles%2FBKzKndg8bc4TwSrYP&noBootstrap=1&jsonp=1"></script>
