--- a/publications.html
+++ b/publications.html
@@ -17,4 +17,6 @@ title: Publications
     {% endfor %}
 
 
-<script src="https://bibbase.org/show?bib=https%3A%2F%2Fbibbase.org%2Fnetwork%2Ffiles%2FBKzKndg8bc4TwSrYP&noBootstrap=1&jsonp=1"></script>
+<script src=" https://bibbase.org/show?bib=https://bibbase.org/network/files/ZfzWAv6mEaRJzCrLv&msg=preview&fileId=ZfzWAv6mEaRJzCrLv&noBootstrap=1&jsonp=1"></script>
+
+    
