--- a/publications.html
+++ b/publications.html
@@ -17,6 +17,6 @@ title: Publications
     {% endfor %}
 
 
-<script src=" https://bibbase.org/show?bib=https://bibbase.org/network/files/ZfzWAv6mEaRJzCrLv&msg=preview&fileId=ZfzWAv6mEaRJzCrLv&noBootstrap=1&jsonp=1"></script>
+<script src="https://bibbase.org/show?bib=https://bibbase.org/f/5BhxxXC2WJ8QAdJBJ/pubs.bib"></script>
 
     
