--- a/publications.html
+++ b/publications.html
@@ -17,6 +17,6 @@ title: Publications
     {% endfor %}
 
 
-<script src="https://bibbase.org/show?bib=https://bibbase.org/f/5BhxxXC2WJ8QAdJBJ/pubs.bib"></script>
+<script src="https://bibbase.org/show?bib=https%3A%2F%2Fbibbase.org%2Fnetwork%2Ffiles%2F77XaZ4BJ9mvMmQFg5&noBootstrap=1&jsonp=1"></script>
 
     
