--- a/publications.html
+++ b/publications.html
@@ -16,7 +16,7 @@ title: Publications
         {% endif %}
     {% endfor %}
 
-
-<script src="https://bibbase.org/show?bib=https%3A%2F%2Fbibbase.org%2Fnetwork%2Ffiles%2F77XaZ4BJ9mvMmQFg5&noBootstrap=1&jsonp=1"></script>
+<!-- <script src="https://bibbase.org/show?bib=https%3A%2F%2Fbibbase.org%2Fnetwork%2Ffiles%2F77XaZ4BJ9mvMmQFg5&noBootstrap=1&jsonp=1"></script>-->
+<script src="https://bibbase.org/show?bib=https://bibbase.org/f/5BhxxXC2WJ8QAdJBJ/pubs%20(1).bib"></script>
 
     
