--- a/publications.html
+++ b/publications.html
@@ -16,6 +16,4 @@ title: Publications
         {% endif %}
     {% endfor %}
 
-<!-- <script src="https://bibbase.org/show?bib=https%3A%2F%2Fbibbase.org%2Fnetwork%2Ffiles%2F77XaZ4BJ9mvMmQFg5&noBootstrap=1&jsonp=1"></script>-->
-<script src="https://bibbase.org/show?bib=https%3A%2F%2Fbibbase.org%2Fnetwork%2Ffiles%2FpkhzTd89Ssigy8FxD&noBootstrap=1&jsonp=1"></script>
-    
+<script src="https://bibbase.org/show?bib=https%3A%2F%2Fbibbase.org%2Fnetwork%2Ffiles%2FS7M79yytALD9HPaZG&noBootstrap=1&jsonp=1"></script>
