--- a/publications.html
+++ b/publications.html
@@ -16,4 +16,4 @@ title: Publications
         {% endif %}
     {% endfor %}
 
-<script src="https://bibbase.org/show?bib=https%3A%2F%2Fbibbase.org%2Fnetwork%2Ffiles%2FQfT62wzztM6YwTqnk&noBootstrap=1&jsonp=1"></script>
+<script src="https://bibbase.org/show?bib=https%3A%2F%2Fbibbase.org%2Fnetwork%2Ffiles%2FXjZW6ThQYjLRXmw9x&noBootstrap=1&jsonp=1"></script>
