--- a/publications.html
+++ b/publications.html
@@ -16,4 +16,4 @@ title: Publications
         {% endif %}
     {% endfor %}
 
-<script src="https://bibbase.org/show?bib=https%3A%2F%2Fbibbase.org%2Fnetwork%2Ffiles%2FMfEKzLchCkXdKEA9A&noBootstrap=1&jsonp=1"></script>
+<script src="https://bibbase.org/show?bib=https%3A%2F%2Fbibbase.org%2Fnetwork%2Ffiles%2FoBEjE9P33Y2GLzdGh&noBootstrap=1&jsonp=1"></script>
