--- a/publications.html
+++ b/publications.html
@@ -17,4 +17,5 @@ title: Publications
     {% endfor %}
 
 
-<script src="https://bibbase.org/show?bib=https%3A%2F%2Fbibbase.org%2Fnetwork%2Ffiles%2FEMAbhAEDmuDeM9vCX&noBootstrap=1&jsonp=1"></script>
+
+<script src="https://bibbase.org/show?bib=https%3A%2F%2Fbibbase.org%2Fnetwork%2Ffiles%2FFAudMkKy3t4wRrrfH&noBootstrap=1&jsonp=1"></script>
