--- a/publications.html
+++ b/publications.html
@@ -16,4 +16,5 @@ title: Publications
         {% endif %}
     {% endfor %}
 
-<script src="https://bibbase.org/show?bib=https%3A%2F%2Fbibbase.org%2Fnetwork%2Ffiles%2FkW5osX2LzZntTZL4P&noBootstrap=1&jsonp=1"></script>
+
+<script src="https://bibbase.org/show?bib=https%3A%2F%2Fbibbase.org%2Fnetwork%2Ffiles%2FvuQa6piXdzdhai7eZ&noBootstrap=1&jsonp=1"></script>
