--- a/publications.html
+++ b/publications.html
@@ -17,4 +17,4 @@ title: Publications
     {% endfor %}
 
 
-<script src="https://bibbase.org/show?bib=https%3A%2F%2Fbibbase.org%2Fnetwork%2Ffiles%2FvuQa6piXdzdhai7eZ&noBootstrap=1&jsonp=1"></script>
+<script src="https://bibbase.org/show?bib=https%3A%2F%2Fbibbase.org%2Fnetwork%2Ffiles%2FYsj7qkwR9yxbbyMnC&noBootstrap=1&jsonp=1"></script>
