--- a/publications.html
+++ b/publications.html
@@ -16,5 +16,4 @@ title: Publications
         {% endif %}
     {% endfor %}
 
-
-<script src="https://bibbase.org/show?bib=https%3A%2F%2Fbibbase.org%2Fnetwork%2Ffiles%2FYsj7qkwR9yxbbyMnC&noBootstrap=1&jsonp=1"></script>
+     <script src="https://bibbase.org/show?bib=https%3A%2F%2Fbibbase.org%2Fnetwork%2Ffiles%2FK2y6WhvFbjjAewqha&noBootstrap=1&jsonp=1"></script>
